<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/>
	</parent>
	<groupId>com.github.jekattack</groupId>
	<artifactId>cornergame-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>cornergame-parent</name>
	<packaging>pom</packaging>
	
	<properties>
		<java.version>18</java.version>
	</properties>

	<modules>
		<module>backend</module>
	</modules>
	
</project>
